unpackaged/main/default/objects/Integration_Vendor__mdt/Integration_Vendor__mdt.object-meta.xml
<CustomObject>
    <label>Integration Vendor</label>
    <pluralLabel>Integration Vendors</pluralLabel>
</CustomObject>