unpackaged/main/default/objects/Integration_Vendor__mdt/fields/API_Key__c.field-meta.xml
<CustomField>
    <fullName>API_Key__c</fullName>
    <label>API Key</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>