unpackaged/main/default/objects/Integration_Vendor__mdt/fields/Integration__c.field-meta.xml
<CustomField>
    <fullName>Integration__c</fullName>
    <label>Integration</label>
    <referenceTo>Integration__mdt</referenceTo>
    <relationshipLabel>Integration Vendors</relationshipLabel>
    <relationshipName>Integration_Vendors</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>